Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/varargs/Warn2.out
Warn2.java:18:18: compiler.warn.inexact.non-varargs.call: java.lang.Object, java.lang.Object[]
- compiler.err.warnings.and.werror
1 error
1 warning
